# comfyui-flux2-mcp

./: .env.example  .gitignore  LICENSE  README.md  install.py  pyproject.toml
src/: comfy_client.py  config.py  server.py
src/templates/: edit.json  t2i.json
tests/: test_smoke.py
